# coccinelleforrust_personal_mirror

./: .#tmp  .gitignore  .gitmodules  Cargo.toml  INSTALL.md  README.md  rust.ungram  tmp  tmp.rs
docs/: Getting Started.md
src/: TODO.txt  cleanup_rules.rs  commons.rs  engine.rs  flagmetavars.rs  free_vars.rs  lib.rs  logical_lines.rs  make_parsable.rs  maketests.sh  newvisitor.rs  parse_cocci.rs  parsing_cocci.rs  parsing_rs.rs  rustfmt.toml  test_exps.rs  tests.rs  treeiterator.rs  util.rs  visitor_ast0.rs  wrap.rs
src/commons/: commons.rs  info.rs  util.rs
src/engine/: cocci_vs_rs.rs  cocci_vs_rsold.rs.old  disjunctions.rs  transformation.rs
src/interface/: interface.rs
src/parsing_cocci/: ast0.rs  cleanup_rules.rs  cocci_grep.rs  flagmetavars.rs  free_vars.rs  get_constants.rs  logical_lines.rs  parse_cocci.rs  save  test.rs  test_exps.rs  tmp.rs  visitor_ast0.rs  wrap.rs
src/parsing_rs/: ast_rs.rs  parse_rs.rs  rs_vs_rs.rs  type_inference.rs  visitor_ast.rs
src/tests/: bindings.rs  disjunctions.rs  empty.cocci  expected12.txt  expected4.txt  expected5.txt  lifetimes.rs  macros.rs  minuses.rs  others.rs  parameter.rs  pluses.rs  ruledependance.rs  test.cocci  test.rs  test1.cocci  test1.rs  test10.cocci  test10.rs  test11.cocci  test11.rs  test12.cocci  test12.rs  test13.cocci  test13.rs  test14.cocci  test15.cocci  test16.rs  test17.rs  test2.cocci  test2.rs  test3.cocci  test3.rs  test4.cocci  test4.rs  test5.cocci  test6.cocci  test6.rs  test7.cocci  test8.rs  (+1 more)
src/tests/bindings/: bindings.rs  expected1.txt  expected10.txt  expected11.txt  expected13.txt  expected2.txt  expected3.txt  expected6.txt  expected8.txt  expected9.txt  test.cocci  test1.cocci  test10.cocci  test11.cocci  test2.rs  test3.rs  test4.rs  test5.cocci  test5.rs  test6.cocci  test6.rs  test7.rs  test8.cocci  test9.cocci
src/tests/disjunctions/: expected1.rs  expected2.rs  expected3.rs  expected4.rs  test1.cocci  test1.rs  test2.cocci  (+5 more)
src/visitor_ast0/: ast0.rs
talks/: cocci_grep.tex  envlogger.cocci  impl.cocci  lpc23.tex  ready.cocci  rfl.aux  rfl.nav  rfl.tex  rw.cocci  shutdown.cocci  signal.cocci  stdin.cocci  threadpool.cocci
wiki/: info.md
(+59 files in other folders)
