[package]
name = "coccinelleforrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax = { path = "src/rust-analyzer/crates/syntax" }
parser = { path = "src/rust-analyzer/crates/parser" }
ide-db = { path = "src/rust-analyzer/crates/ide-db" }
either = "1.8.0"
regex = "1.7.0"
itertools = "0.10.5"
rand = "0.8.5"
