[package]
name = "coccinelleforrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax = { version = "0.0.160", package="ra_ap_syntax" }
parser = { version = "0.0.160", package="ra_ap_parser" }
ide-db = { version = "0.0.160", package="ra_ap_ide_db" }
ide = { version = "0.0.160", package="ra_ap_ide" }
either = "1.8.0"
regex = "1.7.0"
itertools = "0.10.5"
rand = "0.8.5"
clap = { version = "4.3.10", features = ["derive"] }
log = "0.4.19"
env_logger = "0.10.0"
rayon = "1.7"