[package]
name = "coccinelleforrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ra_syntax = { version = "0.0.160", package="ra_ap_syntax" }
ra_parser = { version = "0.0.160", package="ra_ap_parser" }
ra_ide_db = { version = "0.0.160", package="ra_ap_ide_db" }
ra_paths = { version = "0.0.160", package="ra_ap_paths" }
ra_hir_ty = { version = "0.0.160", package="ra_ap_hir_ty" }
ra_project_model = { version = "0.0.160", package="ra_ap_project_model" }
ra_ide = { version = "0.0.160", package="ra_ap_ide" }
ra_base_db = { version = "0.0.160", package="ra_ap_base_db" }
ra_rust_analyzer = { version="0.0.160", package="ra_ap_rust-analyzer" }

either = "1.8.0"
regex = "1.7.0"
itertools = "0.10.5"
rand = "0.8.5"
clap = { version = "4.3.10", features = ["derive"] }
log = "0.4.19"
env_logger = "0.10.0"
rayon = "1.7"

[dependencies.lsp-types] 
version = "=0.94.0" 
features = ["proposed"]

[[bin]]
name="cfr"
path="src/bin/main.rs"
